# LLM-Production

./: .dockerignore  .gitignore  compose.yaml  pyproject.toml
prod/: pyproject.toml
prod/backend/: Dockerfile
prod/backend/app/: main.py  main_cli.py
prod/backend/app/api/v1/routes/: __init__.py  chat.py  health.py  products.py  weather.py
prod/backend/app/core/: cache.py  config.py  dashboard.py  handler.py  llm.py  logger.py  metrics.py  router.py  tools.py  tracing.py  vector_store.py
prod/backend/app/core/data/: products.py
prod/backend/app/models/: main.py
prod/backend/prompts/: cancel_order.txt  code.txt  currency_conversion.txt  customer_lookup.txt  inventory_lookup.txt  math.txt  order_lookup.txt  product_search.txt  reasoning.txt  refund_order.txt  router.txt  shipping_status.txt  summarizer.txt  support.txt  weather.txt
prod/backend/tests/: playground.py  router_tests.json  test_handler.json  test_handler.py  test_math.py  test_router.py
prod/frontend/: .gitignore  Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
prod/frontend/src/: App.tsx  index.css  types.ts
prod/frontend/src/api/: client.ts
prod/frontend/src/components/: ChatBubble.tsx  ChatInput.tsx  Navbar.tsx  SettingsModal.tsx  Sidebar.tsx
prod/frontend/src/pages/: Chat.tsx
