[project]
name = "llms-prod"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.14.3",
    "fastapi>=0.139.0",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
    "uvicorn[standard]>=0.51.0",
]
